# minimal-pylance-issue

./: README.md  main.py  pyproject.toml
utils/package/: files.py  setup.py
